--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     </section>
 
     <!-- Confrimation Window Section -->
-    <section id="confrimation-massage-window" class="container">
+    <section id="confrimation-massage" class="container">
         <div class="confirmation-window-center">
             <div class="book-confirmation">
                 <h1 class="success-heading">Flight Booking Succefully !!! </h1>
